--- a/contacto.html
+++ b/contacto.html
@@ -22,8 +22,15 @@
         <div class="box">
         <i class="fab fa-tiktok"></i>
         <h3>Revisa nuestro contenido educativo y divertido en la red social tik-tok</h3>
-        
+   
+        <li><a href="https://www.tiktok.com/@zara">Tik tok</a></li>
         </div> 
+        <div class="box">
+            <i class="fab fa-instagram"></i>
+            <h3>Revisa nuestro contenido en la red social Instagram</h3>
+            <li><a href="https://www.instagram.com/zara/?hl=es">Instagram</a></li>
+            </div> 
+            
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
